infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buroqet
  labels:
    name: buroqet
